fixed curriculum download button on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,6 @@
     background-color: var(--btn-right-bg);
     border-radius: 1vw;
     color: var(--color-text-color);
-    font-size: 1.3vw;
     font-weight: 500;
     padding: 0.5rem 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
